@@ -1,3 +1,11 @@
+2010-07-05  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/chm_common.c (chm_triplet_to_SEXP): deal more carefully with
+	NAs, needed e.g., on Solaris; thanks to Ruth and Brian Ripley.
+
+	* R/Ops.R (Compare <Csparse>): fix bug uncovered by "alongside" the
+	above.
+
 2010-07-02  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/sparseMatrix.R (x[] <- 0): fix shortcut code.
@@ -14,7 +22,7 @@
 
 2010-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>
 
-	* DESCRIPTION (Version): 0.999375-41, CRAN-released: ...
+	* DESCRIPTION (Version): 0.999375-41, CRAN-released: 2010-07-03, r 2555
 
 	* R/sparseVector.R (spV2M): enable sparseVector -> (sparse)Matrix
 	as(*,.) coercion.
